--- a/_posts/Algorithms/2020-08-02_LC430.md
+++ b/_posts/Algorithms/2020-08-02_LC430.md
@@ -1,7 +1,7 @@
 ---
 title: "LeetCode 430 Flatten a Multilevel Doubly Linked List"
-date: 2020-8-2 12:32:28 -0400
-categories: ImageProcessing
+date: 2020-8-2 11:10:28 -0400
+categories: Algorithms
 tags:
   - openCV 
   - exposure fusion
